# arcium-deposit-program

./: .gitignore  README.md
arcium/: .env.example  .gitignore  Anchor.toml  Arcium.toml  package.json
arcium/encrypted-ixs/: Cargo.toml
arcium/encrypted-ixs/src/: lib.rs
arcium/programs/encrypted_deposit/: Cargo.toml
arcium/programs/encrypted_deposit/src/: lib.rs  shard_cpi.rs
arcium/scripts/: deploy-devnet.sh  reset-devnet-circuit.sh  sync-deposit-circuit-fixture.sh
arcium/test-fixtures/: deposit.arcis  vrf_default_queue.json
