[package]
name = "encrypted_deposit"
version = "0.1.0"
description = "Encrypted deposit round instruction using Arcium MPC"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "encrypted_deposit"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }

arcium-client = { default-features = false, version = "0.10.4" }
arcium-macros = "0.10.4"
arcium-anchor = "0.10.4"
borsh = "1.6.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
